Closed
Bug 646368
Opened 14 years ago
Closed 14 years ago
don't check whether children are cached while tree is traversed
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla5
People
(Reporter: surkov, Assigned: surkov)
References
(Blocks 1 open bug)
Details
(Keywords: access)
Attachments
(1 file)
6.76 KB,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
That allows us to not care where GetChildAt/GetChildrenCount() and etc are called from. Otherwise we'd need to make sure we don't call these methods in the middle of update.
prevents patch from bug 634218 working.
Assignee | ||
Comment 1•14 years ago
|
||
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #523332 -
Flags: review?(bolterbugz)
Comment 2•14 years ago
|
||
Makes me think we should write down our life cycle assumptions somewhere. I like the patch... I'll review the other one first.
Assignee | ||
Comment 3•14 years ago
|
||
(In reply to comment #2)
> Makes me think we should write down our life cycle assumptions somewhere.
what is for and what is relation with this bug?
Comment 4•14 years ago
|
||
I'm talking about when we expect the a11y tree to be up-to-date. It isn't directly related to this bug.
Updated•14 years ago
|
Attachment #523332 -
Flags: review?(bolterbugz) → review+
Assignee | ||
Comment 5•14 years ago
|
||
landed on cedar - http://hg.mozilla.org/projects/cedar/rev/558fff008e74
Whiteboard: [fixed-in-cedar]
Comment 6•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-cedar]
Target Milestone: --- → mozilla2.2
Comment 7•13 years ago
|
||
According to hg bisect, this is what is causing bug 705404.
The funny this is that removing call to EnsureChildren() is the gist of the patch.
You need to log in
before you can comment on or make changes to this bug.
Description
•