Bug 646368 - don't check whether children are cached while tree is traversed, r=davidb